package workshop.model;

/**
 * @Indexed
 */
message TrainPosition {

    /**
     * @Field(store = Store.YES)
     */
    required string trainId = 1;

    /**
     * @Field(store = Store.YES)
     */
    required string name = 2;

    /**
     * @Field(store = Store.YES)
     */
    required int32 delay = 3;

    /**
     * @Field(store = Store.YES)
     */
    required bytes cat = 4;

    /**
     * @Field(store = Store.YES)
     */
    required bytes lastStopName = 5;

    /**
     * @Field(store = Store.YES)
     */
    required TimedPosition current = 6;

}

message TimedPosition {

    required fixed64 timestamp = 1;

    required GeoLocBearing position = 2;

}

message GeoLocBearing {

    required double lat = 1;

    required double lng = 2;

    optional double bearing = 3;

}

